--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
     sdk: flutter
   google_fonts: ^6.2.1
   http: ^1.2.2
-
+  carousel_slider: ^4.2.1
 dev_dependencies:
   flutter_lints: ^3.0.0
   flutter_test:
