--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,19 +28,18 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  carousel_slider: ^5.0.0
+  cloud_firestore: ^5.2.1
   cupertino_icons: ^1.0.6
+  dartz: ^0.10.1
+  firebase_core: ^3.3.0
   flutter:
     sdk: flutter
+  flutter_slidable: ^3.1.1
+  flutter_typeahead: ^4.0.0
   google_fonts: ^6.2.1
   http: ^1.2.2
-  flutter_typeahead: ^4.0.0
-
-  firebase_core: ^3.3.0
-  cloud_firestore: ^5.2.1
-  carousel_slider: ^5.0.0
   provider: ^6.1.2
-  flutter_slidable: ^3.1.1
-
 
 dev_dependencies:
   flutter_lints: ^4.0.0
